{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 814,
  "lineage": "b5be8e73-3ad3-612c-443b-623d0fae8532",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05e3ba0e88c7c1da1",
            "domain": "vpc",
            "id": "eipalloc-03ac98c7f2f02679d",
            "instance": "i-0ad937ed3ba8c8180",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01ec2dba1554f4c0d",
            "private_dns": "ip-10-0-1-67.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-13-114-106-90.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.114.106.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eip-a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.a",
            "aws_security_group.test",
            "aws_subnet.public_1a",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-031b4a823edb7af6a",
            "domain": "vpc",
            "id": "eipalloc-065839f806cd6ae4f",
            "instance": "i-05b9fd628eb9d0979",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-06f2aef513f053ed4",
            "private_dns": "ip-10-0-2-47.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.47",
            "public_dns": "ec2-52-193-211-144.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.211.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eip-c"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.c",
            "aws_security_group.test",
            "aws_subnet.public_1c",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06098fd00463352b6",
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:instance/i-0ad937ed3ba8c8180",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad937ed3ba8c8180",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "test-hoge",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ec2dba1554f4c0d",
            "private_dns": "ip-10-0-1-67.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.67",
            "public_ip": "13.230.197.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02410d86a8c4b2c67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-012c5616df334f8f6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce81ae90643a6a40",
            "tags": {
              "Name": "test-ec2-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012c5616df334f8f6"
            ]
          },
          "dependencies": [
            "aws_security_group.test",
            "aws_subnet.public_1a",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06098fd00463352b6",
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:instance/i-05b9fd628eb9d0979",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b9fd628eb9d0979",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "test-hoge",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f2aef513f053ed4",
            "private_dns": "ip-10-0-2-47.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.47",
            "public_ip": "52.199.137.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edf3391cf50d513d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-012c5616df334f8f6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016e3de8add438bec",
            "tags": {
              "Name": "test-ec2-c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012c5616df334f8f6"
            ]
          },
          "dependencies": [
            "aws_security_group.test",
            "aws_subnet.public_1c",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:internet-gateway/igw-070c1b9042dbdddc1",
            "id": "igw-070c1b9042dbdddc1",
            "owner_id": "808498027952",
            "tags": {
              "Name": "test-internet-gateway"
            },
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:loadbalancer/app/webserver-alb/344d1da501547e29",
            "arn_suffix": "app/webserver-alb/344d1da501547e29",
            "dns_name": "webserver-alb-283005963.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:loadbalancer/app/webserver-alb/344d1da501547e29",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "security_groups": [
              "sg-0920e96f5de560b99"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-016e3de8add438bec"
              },
              {
                "subnet_id": "subnet-0ce81ae90643a6a40"
              }
            ],
            "subnets": [
              "subnet-016e3de8add438bec",
              "subnet-0ce81ae90643a6a40"
            ],
            "vpc_id": "vpc-0ec2291aa878add25",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:listener/app/webserver-alb/344d1da501547e29/863736f1b888a55a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:listener/app/webserver-alb/344d1da501547e29/863736f1b888a55a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:loadbalancer/app/webserver-alb/344d1da501547e29",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.for_webserver",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:listener-rule/app/webserver-alb/344d1da501547e29/863736f1b888a55a/28617e9e353adccf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:listener-rule/app/webserver-alb/344d1da501547e29/863736f1b888a55a/28617e9e353adccf",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:listener/app/webserver-alb/344d1da501547e29/863736f1b888a55a",
            "priority": 99
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.for_webserver",
            "aws_lb_listener.for_webserver",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
            "arn_suffix": "targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "for-webserver-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "for_webserver_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea-20210408101634155300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
            "target_id": "i-0ad937ed3ba8c8180"
          },
          "dependencies": [
            "aws_instance.a",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.test",
            "aws_subnet.public_1a",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "for_webserver_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea-20210408101634104300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:808498027952:targetgroup/for-webserver-lb-tg/881c4532e3e9b7ea",
            "target_id": "i-05b9fd628eb9d0979"
          },
          "dependencies": [
            "aws_instance.c",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.test",
            "aws_subnet.public_1c",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-070c1b9042dbdddc1",
            "id": "r-rtb-0208bce2907bc01d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0208bce2907bc01d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:route-table/rtb-0208bce2907bc01d1",
            "id": "rtb-0208bce2907bc01d1",
            "owner_id": "808498027952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-route-table"
            },
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4352ff779ab91e6",
            "route_table_id": "rtb-0208bce2907bc01d1",
            "subnet_id": "subnet-0ce81ae90643a6a40"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012c697c5d983ebd7",
            "route_table_id": "rtb-0208bce2907bc01d1",
            "subnet_id": "subnet-016e3de8add438bec"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:security-group/sg-0920e96f5de560b99",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0920e96f5de560b99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "808498027952",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:security-group/sg-012c5616df334f8f6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-012c5616df334f8f6",
            "ingress": [],
            "name": "test-security-group",
            "name_prefix": "",
            "owner_id": "808498027952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1213170646",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-012c5616df334f8f6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2722643275",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-012c5616df334f8f6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-348283134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-012c5616df334f8f6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:subnet/subnet-0ce81ae90643a6a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ce81ae90643a6a40",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808498027952",
            "tags": {
              "Name": "test-subnet-public-1a"
            },
            "tags_all": {
              "Name": "test-subnet-public-1a"
            },
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:subnet/subnet-016e3de8add438bec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-016e3de8add438bec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808498027952",
            "tags": {
              "Name": "test-subnet-public-1c"
            },
            "tags_all": {
              "Name": "test-subnet-public-1c"
            },
            "vpc_id": "vpc-0ec2291aa878add25"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:808498027952:vpc/vpc-0ec2291aa878add25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c87cc3467567206",
            "default_route_table_id": "rtb-02c19e644e334f257",
            "default_security_group_id": "sg-0ae6b7db23e18aef2",
            "dhcp_options_id": "dopt-29023c4e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ec2291aa878add25",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c19e644e334f257",
            "owner_id": "808498027952",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}